check some issues with overflow

--- a/projects/J-News_homepage/css/style.css
+++ b/projects/J-News_homepage/css/style.css
@@ -32,7 +32,7 @@
 body {
     background-color: var(--cl-neutral-300);
     font-family: var(--ff-400);
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .container {
@@ -209,6 +209,10 @@ p {
     letter-spacing: 3px;
     font-size: var(--fs-400);
     font-weight: 500;
+}
+
+.main-new-resume-readmore-btn:active {
+    background-color: #00001a;
 }
 
 /* Utility classes */
